[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "property-price-audit-context-fix"
version = "0.1.0"
description = "Local exercise: trusted audit context and correlatable error logs for a property price-update flow"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
